k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend-service
spec:
  ports:
  - port: 90
    targetPort: 90
  selector:
    app: chat-frontend
  type: ClusterIP
